Alignment of photos in editor has been fixed

--- a/lms-app/src/components/pages/Theories/main.module.scss
+++ b/lms-app/src/components/pages/Theories/main.module.scss
@@ -2,12 +2,28 @@
     border: 2px solid rgb(117, 206, 197);
     padding: 1rem;
     border-radius: 10px;
+
+    >img{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+    }
+
     ul{
         padding: 1rem;
         margin: 1rem;
     }
+
     ol{
         padding: 1rem;
         margin: 1rem;
+    }
+
+    div[style*="text-align:none;"]{
+        text-align: center;
+        img{
+            display: inline-block;
+        }
     }
 }
